<resources>
    <string name="app_name">FinancialAssistant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to error messages -->
    <string name="message_not_implemented">Сожалеем, функция пока в разработке</string>
    <string name="message_incorrect_data">Некорректные данные</string>
    <string name="message_error">Произошла ошибка</string>
    <string name="error_network">Проверьте подключение к сети</string>

    <!-- Strings related to fragments' names -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expenses_fragment">Траты</string>
    <string name="incomes_fragment">Доходы</string>
    <string name="regular_expenses_fragment">Регулярные траты</string>
    <string name="regular_incomes_fragment">Регулярные доходы</string>
    <string name="wanted_expenses_fragment">Желаемые покупки</string>
    <string name="recent_actions_fragment">Последние действия</string>
    <string name="info_fragment">Информация</string>
    <string name="credits_fragment">Кредиты</string>
    <string name="statistics_fragment">Статистика</string>
    <string name="help_fragment">Справка</string>
    <string name="tools_fragment">Параметры</string>
    <string name="title_activity_login">Следить за финансами легко!</string>


    <!-- Headers for fragments -->
    <string name="add_expense">Добавить трату</string>
    <string name="edit_expense">Изменить трату</string>
    <string name="add_income">Добавить доход</string>
    <string name="add_regular_exp">Добавить регулярную трату</string>
    <string name="add_regular_inc">Добавить регулярный доход</string>
    <string name="add_wanted">Добавить желаемую покупку</string>
    <string name="add_credit">Добавить кредит</string>
    <string name="tools">Параметры</string>
    <string name="main_header">Рады вас видеть!</string>
    <string name="advices_header">Нет советов на сегодня</string>
    <string name="statistics_header">Статистика и прогнозы</string>
    <string name="show_statistics">Статистика</string>

    <!-- Strings related to buttons -->
    <string name="add">Записать</string>
    <string name="show">Показать</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>


    <!-- Strings related to fragments' content -->
    <string name="date">Дата</string>
    <string name="name">Название</string>
    <string name="sum">Сумма</string>
    <string name="comment">Комментарий</string>
    <string name="period">Период</string>
    <string name="startDate">Дата начала</string>
    <string name="endDate">Дата окончания</string>
    <string name="category">Категория</string>
    <string name="percent">Ставка</string>
    <string name="first">Первый взнос</string>
    <string name="view">Вид</string>
    <string name="statistics">Статистика</string>
    <string name="predictions">Прогнозы</string>

    <!-- Strings related to errors -->
    <string name="field_err">Это поле должно быть заполнено</string>
    <string name="order_of_periods_error">Дата начала периода должна идти раньше даты окончания</string>
    <string name="format_error">Формат даты некорректен</string>
    <string name="start_period_error">Формат даты в поле "Начало периода" некорректен</string>
    <string name="end_period_error">Формат даты в поле "Конец периода" некорректен</string>
    <string name="empty_fields_error">Заполните поля начала и окончания периода статистики</string>
    <string name="end_after_current_date_error">Дата окончания периода не может быть позже текущей</string>
    <string name="date_after_current_date_error">Дата не может быть позже текущей</string>
    <string name="empty_data_error">Все поля, кроме комментария, обязательны для заполнения</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Адрес электронной почты некорректен</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_incorrect_registration">Пользователь с таким e-mail уже зарегистрирован</string>
    <string name="error_incorrect_authorization">Проверьте правильность вводимых данных</string>
    <string name="error_field_required">Поля не должны быть пустыми</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Зарегистрироваться</string>
    <string name="title_activity_sign_in">Войти в систему</string>

    <string name="title_activity_fullscreen_login">Financial Assistant</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_edit_action">edit</string>
    <string name="expenses_by_days">расходы по дням</string>
    <string name="expenses_by_months">расходы по месяцам</string>
    <string name="expenses_predictions_by_months">прогноз расходов по месяцам</string>
    <string name="expense">Трата</string>
    <string name="regExpense">Регулярная трата</string>
    <string name="regIncome">Регулярный доход</string>
    <string name="credit">Кредит</string>
    <string name="income">Доход</string>
    <string name="successful_added">успешно добавлена</string>
    <string name="successful_added_2">успешно добавлен</string>
    <string name="loading_actions">Подождите…</string>
    <string name="error_not_all_filled">Все поля, кроме комментария, обязательны для заполнения</string>
</resources>
