<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.spbau.mit.starlab.financialassistant.fragments.StatisticsFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        style="@style/ButtonStyle"
        android:onClick="onShowStatisticsBtnClick"
        android:text="@string/show" />


    <TextView
        android:id="@+id/txtStatisticsHeader"
        style="@style/FragmentHeader"
        android:text="@string/statistics_header" />

    <TextView
        android:id="@+id/txtView"
        style="@style/UsualTextStyle"
        android:layout_below="@+id/txtStatisticsHeader"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:text="@string/view" />

    <TextView
        android:id="@+id/txtStatisticsPeriod"
        style="@style/UsualTextStyle"
        android:layout_alignLeft="@+id/txtView"
        android:layout_alignStart="@+id/txtView"
        android:layout_below="@+id/txtStatisticsHeader"
        android:layout_marginTop="170dp"
        android:text="@string/period" />


    <TextView
        android:id="@+id/eTxtStatisticsStartPeriod"
        style="@style/SmallTextBoxesStyle"
        android:layout_below="@id/txtStatisticsPeriod"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/startDate"
        android:inputType="none"

        android:text=""
        android:onClick="showDatePickerDialog" />


    <TextView
        android:id="@+id/eTxtStatisticsEndPeriod"
        style="@style/SmallTextBoxesStyle"
        android:layout_below="@id/txtStatisticsPeriod"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="170dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="5dp"
        android:hint="@string/endDate"
        android:onClick="showDatePickerDialog" />

    <RadioGroup
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_below="@+id/txtStatisticsHeader"
        android:layout_marginLeft="170dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="35dp">


        <RadioButton
            android:id="@+id/rBtnStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_gravity="start|center_vertical"
            android:text="Статистика" />

        <RadioButton
            android:id="@+id/rBtnPredicts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:text="Прогнозы" />
    </RadioGroup>



</RelativeLayout>