<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.spbau.mit.starlab.financialassistant.fragments.WantedExpensesFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btnAdd"
        style="@style/ButtonStyle"
        android:text="@string/add" />


    <TextView
        android:id="@+id/txtIncomeInfo"
        style="@style/FragmentHeader"
        android:text="@string/add_wanted" />

    <TextView
        android:id="@+id/txtDate"
        style="@style/UsualTextStyle"
        android:layout_below="@+id/txtIncomeInfo"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/txtName"
        style="@style/UsualTextStyle"
        android:layout_alignLeft="@+id/txtDate"
        android:layout_alignStart="@+id/txtDate"
        android:layout_below="@+id/txtDate"
        android:layout_marginTop="40dp"
        android:text="@string/name" />


    <TextView
        android:id="@+id/txtSum"
        style="@style/UsualTextStyle"
        android:layout_alignLeft="@+id/txtDate"
        android:layout_alignStart="@+id/txtDate"
        android:layout_below="@+id/txtDate"
        android:layout_marginTop="105dp"
        android:text="@string/sum" />

    <TextView
        android:id="@+id/eTxtDate"
        style="@style/TextBoxesStyle"
        android:layout_alignLeft="@+id/txtDate"
        android:layout_alignStart="@+id/txtDate"
        android:layout_below="@id/txtDate"
        android:onClick="showDatePickerDialog"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:inputType="date" />


    <EditText
        android:id="@+id/eTxtName"
        style="@style/TextBoxesStyle"
        android:layout_alignLeft="@+id/txtDate"
        android:layout_alignStart="@+id/txtDate"
        android:layout_below="@id/txtName"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:inputType="text" />


    <EditText
        android:id="@+id/eTxtSum"
        style="@style/TextBoxesStyle"
        android:layout_alignLeft="@+id/txtDate"
        android:layout_alignStart="@+id/txtDate"
        android:layout_below="@id/txtSum"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:inputType="number" />


    <TextView
        android:id="@+id/txtComment"
        style="@style/UsualTextStyle"
        android:layout_alignLeft="@+id/txtDate"
        android:layout_alignStart="@+id/txtDate"
        android:layout_below="@+id/txtDate"
        android:layout_marginTop="200dp"
        android:text="@string/comment" />

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/ScrollViewStyle"
        android:layout_alignLeft="@+id/txtDate"
        android:layout_alignStart="@+id/txtDate"
        android:layout_below="@+id/txtComment"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/eTxtComment"
            style="@style/CommentBoxStyle"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp" />
    </ScrollView>
</RelativeLayout>