<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.spbau.mit.starlab.financialassistant.fragments.IncomesFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btnAddIncome"
        style="@style/ButtonStyle"
        android:onClick="addNewIncome"
        android:text="@string/add" />


    <TextView
        android:id="@+id/txtIncomeInfo"
        style="@style/FragmentHeader"
        android:text="@string/add_income" />

    <TextView
        android:id="@+id/txtIncDate"
        style="@style/UsualTextStyle"
        android:layout_below="@+id/txtIncomeInfo"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/txtIncName"
        style="@style/UsualTextStyle"
        android:layout_alignLeft="@+id/txtIncDate"
        android:layout_alignStart="@+id/txtIncDate"
        android:layout_below="@+id/txtIncDate"
        android:layout_marginTop="40dp"
        android:text="@string/name" />


    <TextView
        android:id="@+id/txtIncSum"
        style="@style/UsualTextStyle"
        android:layout_alignLeft="@+id/txtIncDate"
        android:layout_alignStart="@+id/txtIncDate"
        android:layout_below="@+id/txtIncDate"
        android:layout_marginTop="105dp"
        android:text="@string/sum" />

    <TextView
        android:id="@+id/eTxtIncDate"
        style="@style/TextBoxesStyle"
        android:layout_alignLeft="@+id/txtIncDate"
        android:layout_alignStart="@+id/txtIncDate"
        android:onClick="showDatePickerDialog"
        android:layout_below="@id/txtIncDate"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:inputType="date" />


    <EditText
        android:id="@+id/eTxtIncName"
        style="@style/TextBoxesStyle"
        android:layout_alignLeft="@+id/txtIncDate"
        android:layout_alignStart="@+id/txtIncDate"
        android:layout_below="@id/txtIncName"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:inputType="text" />


    <EditText
        android:id="@+id/eTxtIncSum"
        style="@style/TextBoxesStyle"
        android:layout_alignLeft="@+id/txtIncDate"
        android:layout_alignStart="@+id/txtIncDate"
        android:layout_below="@id/txtIncSum"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:inputType="number" />


    <TextView
        android:id="@+id/txtIncComment"
        style="@style/UsualTextStyle"
        android:layout_alignLeft="@+id/txtIncDate"
        android:layout_alignStart="@+id/txtIncDate"
        android:layout_below="@+id/txtIncDate"
        android:layout_marginTop="200dp"
        android:text="@string/comment" />

    <ScrollView
        android:id="@+id/incScrollView"
        style="@style/ScrollViewStyle"
        android:layout_alignLeft="@+id/txtIncDate"
        android:layout_alignStart="@+id/txtIncDate"
        android:layout_below="@+id/txtIncComment"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/eTxtIncComment"
            style="@style/CommentBoxStyle"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp" />
    </ScrollView>

</RelativeLayout>